# hid

./: README.md
hid/: .flutter-plugins  .flutter-plugins-dependencies  CHANGELOG.md  README.md  pubspec.yaml
hid/example/: .gitignore  README.md  pubspec.yaml
hid/example/lib/: main.dart
hid/lib/: hid.dart
hid/test/: hid_test.dart
hid_android/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
hid_android/android/: build.gradle  settings.gradle
hid_android/android/src/main/: AndroidManifest.xml
hid_android/android/src/main/kotlin/com/rustui/hid_android/: HidAndroidPlugin.kt  HidDevice.kt
hid_android/lib/: hid_android.dart
hid_linux/: README.md  pubspec.yaml
hid_linux/lib/: generated_bindings.dart  hid_linux.dart
hid_macos/: CHANGELOG.md  README.md  pubspec.yaml
hid_macos/lib/: hid_macos.dart
hid_macos/macos/: hid_macos.podspec
hid_platform_interface/: CHANGELOG.md  README.md  pubspec.yaml
hid_platform_interface/lib/: device.dart  hid_platform_interface.dart
hid_windows/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
hid_windows/example/: README.md  pubspec.yaml
hid_windows/example/lib/: main.dart
hid_windows/example/test/: widget_test.dart
hid_windows/example/windows/: CMakeLists.txt
hid_windows/example/windows/runner/: Runner.rc  main.cpp
hid_windows/lib/: generated_bindings.dart  hid_windows.dart
hid_windows/windows/: CMakeLists.txt  hid_windows_plugin.cpp
hid_windows/windows/include/hid_windows/: hid_windows_plugin.h
